# vireo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  CORE_PHILOSOPHY.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: windows-public-beta.yml
.github/scripts/: merge-chain.sh
.github/workflows/: build-release.yml  deploy-website.yml  e2e-full.yml  performance.yml  pr-agent.yml  release.yml  test.yml
.signpath/: README.md
auto-labeler/: analyze.py  classifier.py  compare.py  grouping.py  image_loader.py  label_photos.py  review_server.py  taxonomy.py
auto-labeler/templates/: review.html  settings.html
auto-labeler/tests/: test_analyze.py  test_classifier.py  test_compare.py  test_grouping.py  test_image_loader.py  test_label_photos.py  test_review_server.py  test_taxonomy.py
docs/: ARCHITECTURE.md  BUILDING.md  DEV_NOTES.md  WINDOWS_SUPPORT.md  download-measurement.md  google-apps-script-issue-report.js  headless-api.md  pr-agent-routine-prompt.md  pr-agent-routine.md  privacy-policy.md  tol-embeddings.md
docs/plans/: 2025-03-25-map-view.md  2025-03-25-standardize-error-handling.md  2026-03-17-review-webapp-design.md  2026-03-17-review-webapp-implementation.md  2026-03-17-review-webapp-v2-design.md  2026-03-17-review-webapp-v2-implementation.md  2026-03-17-spotter-browser-design.md  2026-03-18-observability-design.md  2026-03-19-quality-scoring-design.md  2026-03-24-pipeline-page-redesign-impl.md  2026-03-24-pipeline-page-redesign.md  2026-03-24-timm-inat21-classifier-design.md  2026-03-24-unified-species-review-design.md  2026-03-30-merge-import-into-pipeline-design.md  2026-03-30-merge-import-into-pipeline-plan.md  2026-04-01-photo-move-design.md  2026-04-04-highlights-page-design.md  2026-04-04-highlights-page-plan.md  2026-04-09-duplicate-preview-design.md  2026-04-09-duplicate-preview-plan.md  2026-04-15-new-images-banner-design.md  2026-04-15-new-images-banner-plan.md  2026-04-16-eye-focus-detection-design.md  2026-04-16-eye-focus-detection-plan.md  2026-04-16-pipeline-metadata-repair-design.md  2026-04-16-preview-pyramid-design.md  2026-04-16-preview-pyramid-plan.md  2026-04-16-user-first-testing-design.md  2026-04-22-context-menus-design.md  2026-04-22-context-menus-plan.md  2026-04-22-headless-api-design.md  2026-04-22-headless-api-plan.md  2026-04-22-new-images-pipeline-design.md  2026-04-22-new-images-pipeline-plan.md  2026-04-23-detection-storage-redesign-design.md  2026-04-23-detection-storage-redesign-plan.md  2026-04-24-storage-philosophy-design.md  2026-04-25-location-autocomplete-design.md  2026-04-25-location-autocomplete-plan.md  2026-04-25-openable-tabs-design.md  (+50 more)
lr-migration/: export_keywords.py  xmp_writer.py
lr-migration/tests/: test_catalog_reader.py  test_export_keywords.py  test_xmp_writer.py
scripts/: benchmark_library.py  build_sidecar.py  build_signed.sh  build_static.py  build_test_photos.py  export_keywords.py  export_onnx.py  fetch_exiftool.py  generate_tol_embeddings.py  generate_update_manifest.py  install-hooks.sh  notarize_and_publish.sh  release.sh  report_release_downloads.py  sync_version.py  verify_windows_signatures.ps1  windows_package_smoke.ps1
spotter/: analyze.py  app.py  audit.py  classifier.py  compare.py  config.py  db.py  detector.py  grouping.py  importer.py  jobs.py  label_photos.py  labels.py  models.py  review_server.py  scanner.py  sharpness.py  taxonomy.py  thumbnails.py
spotter/templates/: _navbar.html  audit.html  browse.html  classify.html  import.html  review.html  settings.html  variants.html
spotter/tests/: test_db.py  test_jobs.py
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json  sidecar-ui.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  menu.rs  navigation.rs  sidecar.rs  tray.rs  updater.rs
static/: help.js  help.json
tests/: conftest.py  test_compare.py  test_headless_integration.py  test_report_release_downloads.py  test_staging_recovery.py  test_sync_version.py  test_update_manifest.py  test_workspaces.py
tests/e2e/: conftest.py  test_browse_compare.py  test_browse_context_menu.py  test_browse_filterbar.py  test_browse_lightbox.py  test_browse_search_empty_state.py  test_browse_sidebar_resize.py  test_browse_single_select.py  test_browser_security.py  test_burst_group_confirm_split.py  test_burst_group_context_menu.py  test_burst_group_natural_size.py  test_collection_context_menu.py  test_compare_page.py  test_context_menu.py  test_cull_keyboard.py  test_dashboard.py  test_duplicates_bulk_decide.py  test_duplicates_restore.py  test_duplicates_trash_progress.py  test_external_navigation.py  test_eye_keypoints.py  test_filterbar_pages.py  test_folder_tree_context_menu.py  test_highlights_initial_scope.py  test_import_page.py  test_keymap.py  test_keyword_context_menu.py  test_keywords_link.py  test_life_list_explorer.py  test_lifelist_add_verify.py  test_lightbox_context_menu.py  test_lightbox_flag_hotkeys.py  test_location_review.py  test_location_section.py  test_log_panel_perf.py  test_map_deep_link.py  test_misses_flag_hotkeys.py  test_misses_multi_select.py  test_missing_originals_thumbnail_size.py  (+17 more)
vireo/: analyze.py  app.py  audit.py  bursts.py  capture_time.py  catalog.py  classifier.py  classify_job.py  compare.py  config.py  config_schema.py  culling.py  db.py  detail.py  detection_id.py  detector.py  develop.py  dino_embed.py  duplicate_buckets.py  duplicate_scan.py  duplicates.py  encounters.py  exif_orientation.py  export.py  filter_fields.py  grouping.py  highlights.py  image_edits.py  image_loader.py  import_chain.py  import_dedup.py  import_job.py  importer.py  inat.py  ingest.py  job_contract.py  jobs.py  keypoints.py  keyword_normalization.py  label_photos.py  (+43 more)
vireo/repositories/: __init__.py  photo_labels.py  photo_review.py  workspaces.py
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
(+251 files in other folders)
