[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vireo"
version = "0.2.6"
description = "AI-powered wildlife photo organizer"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "huggingface_hub>=1.4.1",
    "imagehash>=4.3.2",
    "lightning>=2.6.1",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "Pillow>=12.1.1",
    "pybioclip>=2.1.1",
    "PytorchWildlife>=1.2.4.2",
    "rawpy>=0.26.1",
    "scipy>=1.17.1",
    "transformers>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.setuptools.packages.find]
include = ["vireo*"]

[tool.pytest.ini_options]
testpaths = ["tests", "vireo/tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "B010",   # do not call setattr with a constant
    "SIM108", # ternary operator
    "UP031",  # printf-style formatting
]

[tool.ruff.lint.per-file-ignores]
"vireo/tests/*" = ["E402"]
"tests/*" = ["E402"]
